Add Doen Catskill Green Valley Floral Dress review to blog

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             </a>
         </div>
         <div class="column">
+            <a href="content/doen_catskill_green/doen_catskill_green_review.html">
             <img src="content/doen_catskill_green/home_page_doen_catskill_green.jpg" alt="Forest" style="width:90%" class="center">
+            </a>
         </div>
     </div>
     
