Remove audio from videos

--- a/content/doen_catskill_green/doen_catskill_green_review.html
+++ b/content/doen_catskill_green/doen_catskill_green_review.html
@@ -26,7 +26,7 @@
     <!--beginning images -->
     <div class="row_review">
         <div class="column_review">
-            <img src="IMG_4519.jpg" alt="" style="height:450px" class="center">
+            <img src="IMG_4521.jpg" alt="" style="height:450px" class="center">
         </div>
         <div class="column_review">
             <img src="IMG_4526.jpg" alt="Forest" style="height:450px" class="center">
@@ -88,7 +88,7 @@
             <img src="IMG_4520.jpg" alt="" style="height:500px" class="center">
         </div>
         <div class="column_review">
-            <video src="doen_catskill_vid_trimmed.mov" height="500px" autoplay class="center">
+            <video muted src="doen_catskill_vid_trimmed.mov" height="500px" autoplay class="center">
             </video>
         </div>
     </div>
