--- a/content/doen_charleston_hardwick/doen_charleston_hardwick_review.html
+++ b/content/doen_charleston_hardwick/doen_charleston_hardwick_review.html
@@ -92,7 +92,7 @@
             <img src="IMG_4618.jpg" alt="" style="height:500px" class="center">
         </div>
         <div class="column_review">
-            <video src="doen_charleston_vid.mov" height="500px" autoplay class="center">
+            <video muted src="doen_charleston_vid.mov" height="500px" autoplay class="center">
             </video>
         </div>
     </div>
