--- a/content/doen_catskill_green/doen_catskill_green_review.html
+++ b/content/doen_catskill_green/doen_catskill_green_review.html
@@ -88,7 +88,7 @@
             <img src="IMG_4520.jpg" alt="" style="height:500px" class="center">
         </div>
         <div class="column_review">
-            <video muted src="doen_catskill_vid_trimmed.mov" height="500px" autoplay class="center">
+            <video volume="0" muted src="doen_catskill_vid_trimmed.mov" height="500px" autoplay loop class="center">
             </video>
         </div>
     </div>
