add link to Sezane Nalla Skirt review on homepage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <img src="content/doen_rose_top_navy/home_page_doen_rose_navy.jpg" alt="" style="width:90%" class="center">
         </div>
         <div class="column">
+            <a href="content/sezane_nalla_skirt/sezane_nalla_skirt_floral_review.html">
             <img src="content/sezane_nalla_skirt/home_page_sezane_nalla.jpg" alt="Forest" style="width:90%" class="center">
+            </a>
         </div>
     </div>
     
