--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>Typically Unimpressed</title>
+<meta name="description" content="Reviews and try-on photos of your favorite romantic, feminine fashion brands.">  
+    
 <link href="style.css" rel="stylesheet" type="text/css">   
     
 </head>
