Add canonical tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <head>
 <title>Typically Unimpressed</title>
 <meta name="description" content="Reviews and try-on photos of your favorite romantic, feminine fashion brands.">  
+
+<link rel="canonical" href="https://typicallyunimpressed.com/" />
     
-<link href="style.css" rel="stylesheet" type="text/css">   
+<link href="style.css" rel="stylesheet" type="text/css"> 
     
 </head>
 <body>
